input group alignment/height fix

--- a/src/partials/components/_input-groups.less
+++ b/src/partials/components/_input-groups.less
@@ -2,9 +2,11 @@
   .h-flex;
 
   .h-input-group-addon {
+    .h-flex-align-self-center;
     background: @gray;
     border: 1px solid @rare;
     font: inherit;
+    max-height: @base * 2.875rem;
     padding:@base * .75;
   }
 
